--- a/src/pages/recipes/recipes.html
+++ b/src/pages/recipes/recipes.html
@@ -7,6 +7,11 @@
           <ion-icon name="add" large></ion-icon>
       </button>
     </ion-buttons>
+    <ion-buttons left>
+      <button ion-button icon-only menuToggle>
+          <ion-icon name="menu" large></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
