--- a/src/pages/shopping-list/shopping-list.html
+++ b/src/pages/shopping-list/shopping-list.html
@@ -1,6 +1,11 @@
 <ion-header>
 
   <ion-navbar>
+    <ion-buttons left>
+        <button ion-button icon-only menuToggle>
+            <ion-icon name="menu" large></ion-icon>
+        </button>
+      </ion-buttons>
     <ion-title text-center>Shopping List</ion-title>
   </ion-navbar>
 
