--- a/src/pages/recipes/recipes.html
+++ b/src/pages/recipes/recipes.html
@@ -12,6 +12,11 @@
           <ion-icon name="menu" large></ion-icon>
       </button>
     </ion-buttons>
+    <ion-buttons end>
+      <button ion-button icon-only (click)="onShowOptions($event)">
+        <ion-icon name="more"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
